--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/main.css">
 
     <link rel="stylesheet" href="./css/fonts/Sofia/stylesheet.css">
-    <link rel="stylesheet" href="./css/fonts/Circular Std/stylesheet.css">
+    <link rel="stylesheet" href="./css/fonts/Circular-Std/stylesheet.css">
 
 </head>
 
@@ -84,12 +84,12 @@
 
                 <div class="cards-wrapper-col col-vertical">
                     <a href="#" class="card card-sale card-horizontal"
-                        style="background-image: url(./../img/cards/vector-1.svg);">
+                        style="background-image: url('./../img/cards/vector-1.svg');">
                         <span>GET UP TO 50% OFF</span>
                     </a>
 
                     <a href="#" class="card card-summer-sale card-horizontal"
-                        style="background-image: url(./../img/cards/vector-2.svg);">
+                        style="background-image: url('./../img/cards/vector-2.svg');">
                         <span class="visually-hidden">Summer sale</span>
                     </a>
                 </div>
