--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
 
                 <div class="cards-wrapper-col col-vertical">
                     <a href="#" class="card card-sale card-horizontal"
-                        style="background-image: url('./../img/cards/vector-1.svg');">
+                        style="background-image: url('./../img/cards/vector-1.jpg');">
                         <span>GET UP TO 50% OFF</span>
                     </a>
 
                     <a href="#" class="card card-summer-sale card-horizontal"
-                        style="background-image: url('./../img/cards/vector-2.svg');">
+                        style="background-image: url('./../img/cards/vector-2.jpg');">
                         <span class="visually-hidden">Summer sale</span>
                     </a>
                 </div>
